[package]
authors = ["simon-something", "Defi-Wonderland"]
name = "youdusa"
description = "Take a Medusa trace as input, parse it and create Foundry reproducer function for every failing properties"
homepage = "https://github.com/defi-wonderland/medusa-gen-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/defi-wonderland/youdusa-rs"
license = "MIT"
readme = "readme.MD"
keywords = ["medusa", "foundry", "solidity", "fuzzing", "reproducer"]
categories = ["command-line-utilities"]

[lib]
name = "youdusa"
path = "src/lib.rs"

[[bin]]
name = "youdusa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
env_logger = "0.10"
